kubernetes/apps/observability/kube-prometheus-stack/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack
spec:
  hostnames: ["prometheus.samcloud.online"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: observability
          port: 9090
